--- a/index.html
+++ b/index.html
@@ -183,7 +183,19 @@
 			<li><a href="http://dndf.org" target="_blank" rel="noopener">dndf.org</a></li>
 			<li><a href="http://infokiosques.net/" target="_blank" rel="noopener">infokiosques.net</a></li>
 			<li><a href="http://industrie.taxi" target="_blank" rel="noopener">industrie.taxi</a></li>
-			<li><a href="https://reseaumutu.info/" target="_blank" rel="noopener">reseaumutu.info</a></li>
+			<li>
+				<a href="https://reseaumutu.info/" target="_blank" rel="noopener">reseaumutu.info</a>
+				<ul>
+					<li><a href="http://basse-chaine.info/" target="_blank" rel="noopener">basse-chaine.info</a></li>
+					<li><a href="http://dijoncter.info" target="_blank" rel="noopener">dijoncter.info</a></li>
+					<li><a href="http://expansive.info/" target="_blank" rel="noopener">expansive.info</a></li>
+					<li><a href="http://iaata.info/" target="_blank" rel="noopener">iaata.info</a></li>
+					<li><a href="http://mars-infos.org/" target="_blank" rel="noopener">mars-infos.org</a></li>
+					<li><a href="https://paris-luttes.info/?lang=fr" target="_blank" rel="noopener">paris-luttes.info</a></li>
+					<li><a href="http://rebellyon.info/" target="_blank" rel="noopener">rebellyon.info</a></li>
+					<li><a href="http://trognon.info" target="_blank" rel="noopener">trognon.info</a></li>
+				</ul>
+			</li>
 		</ul>
 		<ul>
 			<li><a href="http://basse-chaine.info/" target="_blank" rel="noopener">basse-chaine.info</a></li>
