--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
 		<ul>
 			<li><a href="https://seumrevolution.noblogs.org/" target="_blank" rel="noopener">Le SEUM</a></li>
 			<li><a href="https://mauvaissang.noblogs.org/" target="_blank" rel="noopener">Mauvais Sang</a></li>
+			<li><a href="https://loukanikos.noblogs.org/post/category/tire-au-flanc/" target="_blank" rel="noopener">Tire-au-flanc</a></li>
 		</ul>
 
 		<h1>maisons d’édition</h1>
