--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 			<li><a href="http://demosphere.net/" target="_blank" rel="noopener">demosphere.net</a></li>
 			<li><a href="http://dimanche.pm" target="_blank" rel="noopener">dimanche.pm</a></li>
 			<li><a href="http://dndf.org" target="_blank" rel="noopener">dndf.org</a></li>
-			<li><a href="https://garap.org/" target="_blank" rel="noopener">GARAP</a></li>
+			<li><a href="https://garap.org/" target="_blank" rel="noopener">garap.org</a></li>
 			<li><a href="http://infokiosques.net/" target="_blank" rel="noopener">infokiosques.net</a></li>
 			<li><a href="http://industrie.taxi" target="_blank" rel="noopener">industrie.taxi</a></li>
 			<li>
