--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 
 		<h3>35 - Ile-et-Vilaine</h3>
 		<ul>
+			<li><a href="https://www.instagram.com/assemblee.logement.rennes/" target="_blank" rel="noopener">AG Logement</a></li>
 			<li><a href="https://loukanikos.noblogs.org/" target="_blank" rel="noopener">Loukanikos</a></li>
 			<li><a href="https://www.oizos.fr" target="_blank" rel="noopener">Les Oiseaux de la Tempête</a></li>
 		</ul>
