--- a/index.html
+++ b/index.html
@@ -179,11 +179,11 @@
 					<li><a href="https://alter-vienne.info/" target="_blank" rel="noopener">alter-vienne.info</a></li>
 					<li><a href="https://bourrasque-info.org/" target="_blank" rel="noopener">bourrasque-info.org</a></li>
 					<li><a href="https://lagabarre.info" target="_blank" rel="noopener">lagabarre.info</a></li>
-					<li><a href="https://lagrappe.info/" target="_blank" rel="noopener">lagrappe.info/</a></li>
+					<li><a href="https://lagrappe.info/" target="_blank" rel="noopener">lagrappe.info</a></li>
 					<li><a href="https://lenumerozero.info/" target="_blank" rel="noopener">lenumerozero.info</a></li>
-					<li><a href="https://rabasse.info/" target="_blank" rel="noopener">rabasse.info/</a></li>
+					<li><a href="https://rabasse.info/" target="_blank" rel="noopener">rabasse.info</a></li>
 					<li><a href="http://rebellyon.info/" target="_blank" rel="noopener">rebellyon.info</a></li>
-					<li><a href="https://stuut.info/" target="_blank" rel="noopener">stuut.info/</a></li>
+					<li><a href="https://stuut.info/" target="_blank" rel="noopener">stuut.info</a></li>
 					<li><a href="http://trognon.info" target="_blank" rel="noopener">trognon.info</a></li>
 				</ul>
 			</li>
