--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
 				<a href="https://reseaumutu.info/" target="_blank" rel="noopener">reseaumutu.info</a>
 				<ul>
 					<li><a href="https://alter-vienne.info/" target="_blank" rel="noopener">alter-vienne.info</a></li>
+					<li><a href="https://basse-chaine.info/" target="_blank" rel="noopener">basse-chaine.info</a></li>
 					<li><a href="https://bourrasque-info.org/" target="_blank" rel="noopener">bourrasque-info.org</a></li>
 					<li><a href="https://lagabarre.info" target="_blank" rel="noopener">lagabarre.info</a></li>
 					<li><a href="https://lagrappe.info/" target="_blank" rel="noopener">lagrappe.info</a></li>
