--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
 					<li><a href="https://alter-vienne.info/" target="_blank" rel="noopener">alter-vienne.info</a></li>
 					<li><a href="https://basse-chaine.info/" target="_blank" rel="noopener">basse-chaine.info</a></li>
 					<li><a href="https://bourrasque-info.org/" target="_blank" rel="noopener">bourrasque-info.org</a></li>
+					<li><a href="https://expansive.info/" target="_blank" rel="noopener">expansive.info</a></li>
 					<li><a href="https://lagabarre.info" target="_blank" rel="noopener">lagabarre.info</a></li>
 					<li><a href="https://lagrappe.info/" target="_blank" rel="noopener">lagrappe.info</a></li>
 					<li><a href="https://lenumerozero.info/" target="_blank" rel="noopener">lenumerozero.info</a></li>
