--- a/index.html
+++ b/index.html
@@ -172,25 +172,10 @@
 			<li><a href="https://garap.org/" target="_blank" rel="noopener">garap.org</a></li>
 			<li><a href="https://nantes.indymedia.org/" target="_blank" rel="noopener">nantes.indymedia.org</a></li>
 			<li><a href="http://infokiosques.net/" target="_blank" rel="noopener">infokiosques.net</a></li>
+			<li><a href="http://infolibertaire.net/" target="_blank" rel="noopener">infolibertaire.net</a></li>
 			<li><a href="http://industrie.taxi" target="_blank" rel="noopener">industrie.taxi</a></li>
-			<li>
-				<a href="https://reseaumutu.info/" target="_blank" rel="noopener">reseaumutu.info</a>
-				<ul>
-					<li><a href="https://alter-vienne.info/" target="_blank" rel="noopener">alter-vienne.info</a></li>
-					<li><a href="https://basse-chaine.info/" target="_blank" rel="noopener">basse-chaine.info</a></li>
-					<li><a href="https://bourrasque-info.org/" target="_blank" rel="noopener">bourrasque-info.org</a></li>
-					<li><a href="https://expansive.info/" target="_blank" rel="noopener">expansive.info</a></li>
-					<li><a href="https://lagabarre.info" target="_blank" rel="noopener">lagabarre.info</a></li>
-					<li><a href="https://lagrappe.info/" target="_blank" rel="noopener">lagrappe.info</a></li>
-					<li><a href="https://lenumerozero.info/" target="_blank" rel="noopener">lenumerozero.info</a></li>
-					<li><a href="https://rabasse.info/" target="_blank" rel="noopener">rabasse.info</a></li>
-					<li><a href="http://rebellyon.info/" target="_blank" rel="noopener">rebellyon.info</a></li>
-					<li><a href="https://stuut.info/" target="_blank" rel="noopener">stuut.info</a></li>
-					<li><a href="http://trognon.info" target="_blank" rel="noopener">trognon.info</a></li>
-				</ul>
-			</li>
-		</ul>
-		<ul>
+			<li><a href="http://lahuttedesclasses.net/" target="_blank" rel="noopener">lahuttedesclasses.net</a></li>
+			<li><a href="https://reseaumutu.info/" target="_blank" rel="noopener">reseaumutu.info</a></li>
 			<li><a href="https://sortirducapitalisme.fr/" target="_blank" rel="noopener">sortirducapitalisme.fr</a>
 		</ul>
 
